--- a/a-page.html
+++ b/a-page.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="styles/page.css">
 </head>
 <body>
-    
+    <header class="header">
+        <h1 class="header-tittle">All Thinks Are <br>
+            Possible If You <br> believe</h1>
+        <p class="header-desc">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, <br> by injected humour, or randomized words</p>
+        <div class="header-button">
+        <button class="primary-btn">contact us</button>
+        </div>
+    </header>
 </body>
 </html>
