--- a/a-page.html
+++ b/a-page.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/page.css">
 </head>
 <body>
+    <!-- header part -->
     <header class="header">
         <h1 class="header-tittle">All Thinks Are <br>
             Possible If You <br> believe</h1>
@@ -16,5 +17,24 @@
         <button class="primary-btn">contact us</button>
         </div>
     </header>
+
+    <!-- main part -->
+    <main>
+        <section class="failures">
+            <div class="fail-img">
+                <img src="images/person.png" alt="">
+            </div>
+            <div class="fail-text">
+                <h3 class="fail-h3">My failures of <br> previous year</h3>
+                <p class="fail-p">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ul class="fail-ul">
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular belief.</li>
+                    <li>Contrary to popular , is not simply.</li>
+                    <li>Contrary to popular belief, is not simply.</li>
+                </ul>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
