--- a/a-page.html
+++ b/a-page.html
@@ -35,6 +35,35 @@
                 </ul>
             </div>
         </section>
+
+        <section class="my-plans">
+            <h3 class="plan-head">My Plans</h3>
+            <div class="plan-icon">
+                <div class="dev-plan">
+                    <img class="icon-img1" src="images/icons/web.png" alt="">
+                    <p class="icon-head">Web Development</p>
+                    <p class="icon-desc">I want to start</p>
+                </div>
+                <div class="java-plan">
+                    <img class="icon-img2" src="images/icons/js.png" alt="">
+                    <p class="icon-head">Javascript</p>
+                    <p class="icon-desc">I want to learn</p>
+                </div>
+                <div>
+                    <img class="icon-img3" src="images/icons/smoke.png" alt="">
+                    <p class="icon-head">Smoking Habit</p>
+                    <p class="icon-desc">I want to end</p></div>
+                <div>
+                    <img class="icon-img4" src="images/icons/ecom.png" alt="">
+                    <p class="icon-head">ecommerce</p>
+                    <p class="icon-desc">I want to develop</p></div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            
+        </section>
     </main>
 </body>
 </html>
