--- a/a-page.html
+++ b/a-page.html
@@ -62,7 +62,22 @@
         </section>
 
         <section>
-            
+            <div class="bottom-image">
+                <div class="bottom-text">
+                    <h1 class="bm-head">Awlays keep a positive <br>mindset</h1>
+                    <button class="btn2">Call Now</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="footer">
+            <div class="future">
+
+            </div>
+
+            <div class="subscribe">
+
+            </div>
         </section>
     </main>
 </body>
