--- a/a-page.html
+++ b/a-page.html
@@ -72,11 +72,29 @@
 
         <section class="footer">
             <div class="future">
-
+                <h1 class="fu-head">Future</h1>
+                <p class="fu-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words <br><br>
+                    Email : info@gmail.com <br><br>
+                    Phone : 01500 00 00 00</p>
+                    <div class="fo-icon">
+                        <div class="fo-img">
+                            <a href=""><img src="images/icons/fb.png" alt=""></a>
+                        </div>
+                        <div class="fo-img">
+                            <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                        </div>
+                        <div class="fo-img">
+                            <a href=""><img src="images/icons/youtube.png" alt=""></a>
+                        </div>
+                    </div>
             </div>
 
             <div class="subscribe">
-
+                <h1 class="fo-sub">Subscribe</h1>
+                <form>
+                <p class="box">Enter your email</p>
+                <input class="button-fo" type="submit" name="" value="Subscribe" >
+                </form>
             </div>
         </section>
     </main>
